--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <h1>alovenbe.github.io</h1>
-      <h2></h2>
+      <h2>Welcome! Check out some of my projects.</h2>
 
       <section id="downloads">
         <a href="https://github.com/alovenbe" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
